--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -508,9 +508,27 @@
 				<key>Comment</key>
 				<string></string>
 				<key>Enabled</key>
-				<true/>
+				<false/>
 				<key>ExecutablePath</key>
 				<string>Contents/MacOS/USBInjectAll</string>
+				<key>MaxKernel</key>
+				<string></string>
+				<key>MinKernel</key>
+				<string></string>
+				<key>PlistPath</key>
+				<string>Contents/Info.plist</string>
+			</dict>
+			<dict>
+				<key>Arch</key>
+				<string>Any</string>
+				<key>BundlePath</key>
+				<string>USBPorts.kext</string>
+				<key>Comment</key>
+				<string></string>
+				<key>Enabled</key>
+				<true/>
+				<key>ExecutablePath</key>
+				<string></string>
 				<key>MaxKernel</key>
 				<string></string>
 				<key>MinKernel</key>
@@ -1173,7 +1191,7 @@
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>MLB</key>
-			<string>C02834101J9HRPCUE</string>
+			<string>C02934502J9HRPCUE</string>
 			<key>ProcessorType</key>
 			<integer>1541</integer>
 			<key>ROM</key>
@@ -1187,7 +1205,7 @@
 			<key>SystemSerialNumber</key>
 			<string>C02X9XY8HV2N</string>
 			<key>SystemUUID</key>
-			<string>459C0102-8178-4134-8425-A70FB1388571</string>
+			<string>459C0902-8178-4034-8425-A70FB1388571</string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
@@ -1222,6 +1240,8 @@
 			<key>AppleEvent</key>
 			<string>Builtin</string>
 			<key>CustomDelays</key>
+			<false/>
+			<key>GraphicsInputMirroring</key>
 			<false/>
 			<key>KeyInitialDelay</key>
 			<integer>50</integer>
