--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -843,7 +843,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>-v alcid=11 -wegnoegpu igfxonln=1</string>
+				<string>alcid=11 -wegnoegpu igfxonln=1</string>
 				<key>csr-active-config</key>
 				<data>5wMAAA==</data>
 				<key>prev-lang:kbd</key>
